src/api/dcps/gapi/include/gapi.h

typedef char                                    gapi_char;
typedef c_char      gapi_char;
/*
 * typedef HANDLE_TYPE_NATIVE InstanceHandle_t;
 */
typedef GAPI_HANDLE_TYPE_NATIVE gapi_instanceHandle_t;
/*
 * typedef long ReturnCode_t;
 */
typedef gapi_long gapi_returnCode_t;
typedef struct {
    gapi_unsigned_long _maximum;
    gapi_unsigned_long _length;
    gapi_instanceHandle_t *_buffer;
    gapi_boolean _release;
} gapi_instanceHandleSeq;
typedef struct {
    gapi_unsigned_long _maximum;
    gapi_unsigned_long _length;
    gapi_string *_buffer;
    gapi_boolean _release;
} gapi_stringSeq;
typedef gapi_unsigned_long gapi_statusMask;
typedef gapi_object gapi_topicDescription;
typedef gapi_object gapi_dataReader;
typedef gapi_object gapi_dataReaderView;
typedef gapi_object gapi_subscriber;
struct gapi_dataReaderListener {
    void *listener_data;
    gapi_listener_RequestedDeadlineMissedListener on_requested_deadline_missed;
    gapi_listener_RequestedIncompatibleQosListener on_requested_incompatible_qos;
    gapi_listener_SampleRejectedListener on_sample_rejected;
    gapi_listener_LivelinessChangedListener on_liveliness_changed;
    gapi_listener_DataAvailableListener on_data_available;
    gapi_listener_SubscriptionMatchedListener on_subscription_match;
    gapi_listener_SampleLostListener on_sample_lost;
};
/* // This is a bit-mask SampleStateKind
 * typedef unsigned long SampleStateMask;
 */
typedef gapi_unsigned_long gapi_sampleStateMask;
/* // This is a bit-mask ViewStateKind
 * typedef unsigned long ViewStateMask;
 */
typedef gapi_unsigned_long gapi_viewStateMask;
/* // This is a bit-mask InstanceStateKind
 * typedef unsigned long InstanceStateMask;
 */
typedef gapi_unsigned_long gapi_instanceStateMask;
/*
 * interface ReadCondition : Condition
 */
typedef gapi_object gapi_readCondition;
/*
 * interface QueryCondition : ReadCondition
 */
typedef gapi_object gapi_queryCondition;
/*     ReadCondition
 *     create_readcondition(
 *         in SampleStateMask sample_states,
 *         in ViewStateMask view_states,
 *         in InstanceStateMask instance_states);
 */
OS_API gapi_readCondition
gapi_dataReader_create_readcondition (
    gapi_dataReader _this,
    const gapi_sampleStateMask sample_states,
    const gapi_viewStateMask view_states,
    const gapi_instanceStateMask instance_states);
/*     QueryCondition
 *     create_querycondition(
 *         in SampleStateMask sample_states,
 *         in ViewStateMask view_states,
 *         in InstanceStateMask instance_states,
 *         in string query_expression,
 *         in StringSeq query_parameters);
 */
OS_API gapi_queryCondition
gapi_dataReader_create_querycondition (
    gapi_dataReader _this,
    const gapi_sampleStateMask sample_states,
    const gapi_viewStateMask view_states,
    const gapi_instanceStateMask instance_states,
    const gapi_char *query_expression,
    const gapi_stringSeq *query_parameters);
/*     ReturnCode_t
 *     delete_readcondition(
 *         in ReadCondition a_condition);
 */
OS_API gapi_returnCode_t
gapi_dataReader_delete_readcondition (
    gapi_dataReader _this,
    const gapi_readCondition a_condition);
/*     ReturnCode_t
 *     delete_contained_entities();
 */
OS_API gapi_returnCode_t
gapi_dataReader_delete_contained_entities (
    gapi_dataReader _this);
/*     DataReaderView
  *     create_view (
  *     in DataReaderViewQos * qos);
 */
OS_API gapi_dataReaderView
gapi_dataReader_create_view (
    gapi_dataReader _this,
    const gapi_dataReaderViewQos * qos);
/*     ReturnCode_t
 *     delete_view(
 *        in DataReaderView a_view);
 */
OS_API gapi_returnCode_t
gapi_dataReader_delete_view (
    gapi_dataReader _this,
    gapi_dataReaderView a_view);
/*     ReturnCode_t
 *     set_default_datareaderview_qos(
 *         in DataReaderViewQos qos);
 */
OS_API gapi_returnCode_t
gapi_dataReader_set_default_datareaderview_qos (
    gapi_dataReader _this,
    const gapi_dataReaderViewQos *qos);
/*     ReturnCode_t
 *     get_default_datareaderview_qos(
 *         inout DataReaderViewQos qos);
 */
OS_API gapi_returnCode_t
gapi_dataReader_get_default_datareaderview_qos (
    gapi_dataReader _this,
    gapi_dataReaderViewQos *qos);
/*     ReturnCode_t
 *     set_qos(
 *         in DataReaderQos qos);
 */
OS_API gapi_returnCode_t
gapi_dataReader_set_qos (
    gapi_dataReader _this,
    const gapi_dataReaderQos *qos);
/*     ReturnCode_t
 *     get_qos(
 *         inout DataReaderQos qos);
 */
OS_API gapi_returnCode_t
gapi_dataReader_get_qos (
    gapi_dataReader _this,
    gapi_dataReaderQos *qos);
/*     ReturnCode_t
 *     set_listener(
 *         in DataReaderListener a_listener,
 *         in StatusKindMask mask);
 */
OS_API gapi_returnCode_t
gapi_dataReader_set_listener (
    gapi_dataReader _this,
    const struct gapi_dataReaderListener *a_listener,
    const gapi_statusMask mask);
/*     DataReaderListener
 *     get_listener();
 */
OS_API struct gapi_dataReaderListener
gapi_dataReader_get_listener (
    gapi_dataReader _this);
/*     TopicDescription
 *     get_topicdescription();
 */
OS_API gapi_topicDescription
gapi_dataReader_get_topicdescription (
    gapi_dataReader _this);
/*     Subscriber
 *     get_subscriber();
 */
OS_API gapi_subscriber
gapi_dataReader_get_subscriber (
    gapi_dataReader _this);
/*     SampleRejectedStatus
 *     get_sample_rejected_status();
 */
OS_API gapi_returnCode_t
gapi_dataReader_get_sample_rejected_status (
    gapi_dataReader _this,
    gapi_sampleRejectedStatus * status);
/*     LivelinessChangedStatus
 *     get_liveliness_changed_status();
 */
OS_API gapi_returnCode_t
gapi_dataReader_get_liveliness_changed_status (
    gapi_dataReader _this,
    gapi_livelinessChangedStatus * status);
/*     RequestedDeadlineMissedStatus
 *     get_requested_deadline_missed_status();
 */
OS_API gapi_returnCode_t
gapi_dataReader_get_requested_deadline_missed_status (
    gapi_dataReader _this,
    gapi_requestedDeadlineMissedStatus * status);
/*     RequestedIncompatibleQosStatus
 *     get_requested_incompatible_qos_status();
 */
OS_API gapi_returnCode_t
gapi_dataReader_get_requested_incompatible_qos_status (
    gapi_dataReader _this,
    gapi_requestedIncompatibleQosStatus * status);
/*     SubscriptionMatchedStatus
 *     get_subscription_match_status();
 */
OS_API gapi_returnCode_t
gapi_dataReader_get_subscription_matched_status (
    gapi_dataReader _this,
    gapi_subscriptionMatchedStatus * status);
/*     SampleLostStatus
 *     get_sample_lost_status();
 */
OS_API gapi_returnCode_t
gapi_dataReader_get_sample_lost_status (
    gapi_dataReader _this,
    gapi_sampleLostStatus * status);
/*     ReturnCode_t
 *     wait_for_historical_data(
 *         in Duration_t max_wait);
 */
OS_API gapi_returnCode_t
gapi_dataReader_wait_for_historical_data (
    gapi_dataReader _this,
    const gapi_duration_t *max_wait);
/*     ReturnCode_t
 *     wait_for_historical_data_w_condition(
 *         in String filter_expression,
 *         in StringSeq filter_parameters,
 *         in Time_t min_source_timestamp,
 *         in Time_t max_source_timestamp,
 *         in ResourceLimitsQosPolicy resource_limits,
 *         in Duration_t max_wait);
 */
OS_API gapi_returnCode_t
gapi_dataReader_wait_for_historical_data_w_condition (
    gapi_dataReader _this,
    const gapi_char *filter_expression,
    const gapi_stringSeq *filter_parameters,
    const gapi_time_t *min_source_timestamp,
    const gapi_time_t *max_source_timestamp,
    const gapi_resourceLimitsQosPolicy *resource_limits,
    const gapi_duration_t *max_wait);
/*     ReturnCode_t get_matched_publications(
 *     inout InstanceHandleSeq publication_handles);
 */
OS_API gapi_returnCode_t
gapi_dataReader_get_matched_publications (
    gapi_dataReader _this,
    gapi_instanceHandleSeq *publication_handles);
/*     ReturnCode_t
 *     get_matched_publication_data(
 *         inout PublicationBuiltinTopicData publication_data,
 *         in InstanceHandle_t publication_handle);
 */
OS_API gapi_returnCode_t
gapi_dataReader_get_matched_publication_data (
    gapi_dataReader _this,
    gapi_publicationBuiltinTopicData *publication_data,
    const gapi_instanceHandle_t publication_handle);